<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/molen_background"
    tools:context=".DetailActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/tv_item_img"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                tools:src="@color/colorPrimaryDark"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:src="@drawable/shape_price"
                android:layout_below="@+id/tv_item_img"/>

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rp_15_000"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#FDFDFD"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="253dp"/>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:orientation="vertical">



                <ImageView
                    android:id="@+id/detail_img"
                    android:layout_width="40dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="30dp"
                    android:src="@drawable/detail_img"/>

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_tiap_molen"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_below="@id/detail_img"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="30dp"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/tv_item_name">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_text_detail"
                            android:layout_width="350dp"
                            android:layout_height="120dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="15dp"
                            android:layout_below="@id/tv_item_name"
                            android:scrollbars="vertical"
                            android:text="@string/isi_detail_molen" />
                    </LinearLayout>
                </ScrollView>


            </RelativeLayout>


        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <ImageView
                android:id="@+id/btn_order"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="50dp"
                android:src="@drawable/btn_order"/>

            <ImageView
                android:id="@+id/btn_home"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="50dp"
                android:src="@drawable/btn_home"/>
        </RelativeLayout>

    </TableLayout>

</ScrollView>